# Aegis

./: .gitignore  README.md  main.py  requirements.txt  run_demo.py  run_real_market.py  run_visualisations.py  setup.py
docs/: architecture.md  mathematics.md
src/cpp/monte_carlo/: CMakeLists.txt
src/cpp/pde_pricing/: CMakeLists.txt
src/java/dashboard/: build.gradle
src/java/gateway/: build.gradle
src/python/: __init__.py
src/python/ai_optimizer/: __init__.py
src/python/data_pipeline/: __init__.py  normalizer.py  pipeline.py  synthetic.py  yahoo_fetcher.py
src/python/dg_visualization/: README_DG_VISUALIZATION.md  __init__.py  config.py  curvature.py  geometric_analyzer.py  manifold_visualization.py  network.py  portfolio_weights.py
src/python/llm_intelligence/: __init__.py
src/python/utils/: __init__.py
