cmake_minimum_required(VERSION 3.16)
project(aegis_monte_carlo VERSION 0.1.0 LANGUAGES CXX)

# C++17 standard
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Find OpenMP for parallelization
find_package(OpenMP)

# Source files (to be implemented)
set(SOURCES
    # src/monte_carlo_engine.cpp
    # src/random_generator.cpp
    # src/portfolio.cpp
)

# Header files
set(HEADERS
    # include/monte_carlo_engine.hpp
    # include/random_generator.hpp
    # include/portfolio.hpp
)

# Build library
# add_library(aegis_monte_carlo ${SOURCES} ${HEADERS})

# Link OpenMP if available
# if(OpenMP_CXX_FOUND)
#     target_link_libraries(aegis_monte_carlo PUBLIC OpenMP::OpenMP_CXX)
# endif()

# Build executable
# add_executable(monte_carlo_demo src/main.cpp)
# target_link_libraries(monte_carlo_demo aegis_monte_carlo)

message(STATUS "Aegis Monte Carlo Engine - Placeholder")
message(STATUS "TODO: Implement high-performance risk calculations")
